size chart display fix on safari

--- a/app/design/frontend/peterjacksons/petertheme/web/css/blocks/_size-chart.scss
+++ b/app/design/frontend/peterjacksons/petertheme/web/css/blocks/_size-chart.scss
@@ -248,6 +248,7 @@ body[class~='cms-size-chart'] {
 
     &__box {
         display: flex;
+        display: -webkit-inline-box;
         flex-flow: row nowrap;
         flex-grow: 1;
         flex-basis: 6px;
